--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -175,6 +175,8 @@ pre {
   padding: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,.1);
   overflow: auto;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 code {
@@ -269,6 +271,25 @@ Full-Width Styles
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1500px) {
+  .inner {
+    max-width: 1360px;
+  }
+
+  #main_left {
+    width: 940px;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  #main_right {
+    width: 400px;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 20px;
+  }
+}
+
 #forkme_banner {
   display: block;
   position: absolute;
@@ -293,8 +314,16 @@ Full-Width Styles
   background: linear-gradient(top, #373737, #212121);
 }
 
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
+header > h1 {
+  margin: 0;
+  line-height: 0;
+  text-align: right;
+}
+header > h1 > img {
+  margin: 0;
+  border: none;
+  padding: 0;
+  box-shadow: none;
 }
 
 #project_title {
@@ -359,7 +388,8 @@ Full-Width Styles
 }
 
 #main_content {
-  padding-top: 40px;
+  padding: 10px;
+  margin: 0 auto;
 }
 
 #footer_wrap {
