Hide empty preview labels

--- a/content/options.css
+++ b/content/options.css
@@ -23,3 +23,8 @@
 #b_previewarrownext > toolbarbutton {
 	transform: scaleX(-1);
 }
+
+#l_previeworiginalfilesize[value=""],
+#l_previewresizedfilesize[value=""] {
+	display: none;
+}
