--- a/content/options.css
+++ b/content/options.css
@@ -14,14 +14,19 @@
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
 }
 
-#b_previewarrowprevious > toolbarbutton,
-#b_previewarrownext > toolbarbutton {
+#b_previewarrows {
+	min-width: 3em;
+}
+#b_previewarrows > toolbarbutton {
+	-moz-appearance: none;
+	border: none;
 	list-style-image: url("chrome://shrunked/content/arrow.svg");
 }
-
-#b_previewarrowprevious > toolbarbutton:-moz-locale-dir(rtl),
-#b_previewarrownext > toolbarbutton {
-	transform: scaleX(-1);
+#b_previewarrows > toolbarbutton:first-child > .toolbarbutton-icon {
+	transform: rotate(90deg);
+}
+#b_previewarrows > toolbarbutton:last-child > .toolbarbutton-icon {
+	transform: rotate(-90deg);
 }
 
 #l_previeworiginalfilesize[value=""],
