Add spacing between original and resized info

--- a/content/options.css
+++ b/content/options.css
@@ -29,6 +29,11 @@
 	transform: rotate(-90deg);
 }
 
+#l_previeworiginalsize,
+#l_previewresized {
+	margin-top: 0.25em;
+}
+
 #l_previeworiginalfilesize[value=""],
 #l_previewresizedfilesize[value=""] {
 	display: none;
