--- a/content/config.css
+++ b/content/config.css
@@ -2,6 +2,7 @@
 
 html|input[type="number"] {
 	width: 0 !important;
+	box-shadow: none;
 }
 html|input[type="number"]::-moz-number-wrapper {
 	width: 10ch !important;
