--- a/content/options.css
+++ b/content/options.css
@@ -1,5 +1,11 @@
-#tb_width, #tb_height {
-	-moz-binding: url("chrome://shrunked/content/bindings.xml#numberbox");
+@namespace html url(http://www.w3.org/1999/xhtml);
+
+html|input[type="number"] {
+	width: 0 !important;
+	box-shadow: none;
+}
+html|input[type="number"]::-moz-number-wrapper {
+	width: 10ch !important;
 }
 
 #l_previewheader {
