--- a/content/options.css
+++ b/content/options.css
@@ -1,7 +1,7 @@
 @namespace html url(http://www.w3.org/1999/xhtml);
 
 html|input[type="number"] {
-	width: 0 !important;
+	width: 3em !important;
 	box-shadow: none;
 }
 html|input[type="number"]::-moz-number-wrapper {
