--- a/content/options.css
+++ b/content/options.css
@@ -1,114 +1,135 @@
 @namespace html url(http://www.w3.org/1999/xhtml);
 
 html {
-	height: 100%;
+  height: 100%;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  font: message-box;
 }
 
 body#options {
-	margin: 0;
-	padding: 1em;
-	box-sizing: border-box;
-	background-color: #f0f0f0;
-}
-
-input[type="range"]::-moz-range-track {
-	background-color: rebeccapurple;
-}
-
-.indent {
-	margin-inline-start: 2em;
-}
-
-#rg_size {
-	flex: 1;
-	margin-bottom: 1em;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+  margin: 0;
+  padding: 1em;
+  box-sizing: border-box;
+  background-color: #f0f0f0;
 }
 
 h1 {
-	font-size: 1em;
-	margin: 0;
+  font-size: 1em;
+  margin: 0 0 0.25em;
 }
 
-html|input[type="number"] {
-	width: 5em;
-	box-shadow: none;
+input[type="checkbox"],
+input[type="radio"] {
+  vertical-align: text-bottom;
+  margin-block: 0;
+}
+input[type="number"] {
+  width: 5em;
+  box-shadow: none;
+}
+input[type="range"]::-moz-range-track {
+  background-color: rebeccapurple;
+}
+
+.indent {
+  margin-inline-start: 2em;
+}
+
+#d_content {
+  flex: 1;
+  margin-bottom: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#rg_size {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#l_width,
+#l_height {
+  margin-inline-start: 1em;
 }
 
 #l_previewheader {
-	margin-top: 1em;
+  margin-top: 1em;
 }
 
 #b_previewbox {
-	height: 130px;
-	margin: 1em 0;
-	padding: 10px 5px;
-	background-color: rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
-	display: flex;
+  height: 130px;
+  margin-bottom: 1em;
+  padding: 0 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
+  display: flex;
 }
-
-
 #b_previewarrows {
-	min-width: 3em;
-	align-items: center;
-	justify-content: space-evenly;
-	display: flex;
-	flex-direction: column;
+  min-width: 3em;
+  align-items: center;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
 }
 #b_previewarrows > button {
-	appearance: none;
-	border: none;
-	background: transparent url("arrow.svg") center center / cover no-repeat;
-	width: 24px;
-	height: 24px;
+  appearance: none;
+  border: none;
+  background: transparent url("arrow.svg") center center / cover no-repeat;
+  width: 24px;
+  height: 24px;
 }
 #b_previewarrows > button:first-child {
-	transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 #b_previewarrows > button:last-child {
-	transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 
 #d_preview {
-	display: flex;
-	width: 130px;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  width: 130px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 #d_preview > :first-child {
-	display: flex; flex-direction: column;
+  display: flex; flex-direction: column;
 }
 #i_previewthumb {
-	max-width: 110px;
-	max-height: 110px;
+  max-width: 110px;
+  max-height: 110px;
 }
 
 #d_info {
-	display: flex;
-	flex-direction: column;
-	flex: 1;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
 }
 #l_previeworiginalsize,
 #l_previewresized {
-	margin-top: 0.25em;
+  margin-top: 0.25em;
 }
 
 #l_previeworiginalfilesize[value=""],
 #l_previewresizedfilesize[value=""] {
-	display: none;
+  display: none;
 }
 
 #d_buttons {
-	text-align: end;
+  display: flex;
+  justify-content: end;
+}
+#b_ok,
+#b_cancel {
+  margin-inline-start: 0.75em;
+  min-width: 6em;
 }
