--- a/content/options.css
+++ b/content/options.css
@@ -5,10 +5,12 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
   height: 100%;
   font: message-box;
+}
+
+body#config {
+  line-height: 2em;
 }
 
 body#options {
@@ -27,13 +29,29 @@ input[type="checkbox"],
 input[type="radio"] {
   vertical-align: text-bottom;
   margin-block: 0;
+  margin-inline: 0 0.5em;
 }
 input[type="number"] {
   width: 5em;
   box-shadow: none;
+  margin-block: 0;
+  margin-inline: 0.5em 0;
+}
+input[type="range"] {
+  margin-inline: 1em;
+  vertical-align: middle;
 }
 input[type="range"]::-moz-range-track {
-  background-color: rebeccapurple;
+  background-color: ThreeDLightShadow;
+}
+
+.hbox {
+  display: flex;
+}
+
+.vbox {
+  display: flex;
+  flex-direction: column;
 }
 
 .indent {
@@ -43,15 +61,11 @@ input[type="range"]::-moz-range-track {
 #d_content {
   flex: 1;
   margin-bottom: 1em;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 
 #rg_size {
   flex: 1;
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
 }
 
@@ -70,14 +84,11 @@ input[type="range"]::-moz-range-track {
   padding: 0 5px;
   background-color: rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5) inset;
-  display: flex;
 }
 #b_previewarrows {
   min-width: 3em;
   align-items: center;
   justify-content: space-evenly;
-  display: flex;
-  flex-direction: column;
 }
 #b_previewarrows > button {
   appearance: none;
@@ -94,14 +105,9 @@ input[type="range"]::-moz-range-track {
 }
 
 #d_preview {
-  display: flex;
   width: 130px;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-}
-#d_preview > :first-child {
-  display: flex; flex-direction: column;
 }
 #i_previewthumb {
   max-width: 110px;
@@ -109,8 +115,6 @@ input[type="range"]::-moz-range-track {
 }
 
 #d_info {
-  display: flex;
-  flex-direction: column;
   flex: 1;
   justify-content: center;
 }
@@ -125,7 +129,6 @@ input[type="range"]::-moz-range-track {
 }
 
 #d_buttons {
-  display: flex;
   justify-content: end;
 }
 #b_ok,
